<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back2"
    android:orientation="vertical"
    android:padding="30dp"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:id="@+id/s"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="40dp"
        android:textColor="@color/purple_200"
        android:text="@string/s"
        android:textStyle="bold"
        android:layout_marginTop="10dp"/>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_image"
        android:background="@drawable/ic_add_image"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"/>

    <EditText
        android:id="@+id/ed_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/ed_username"
        android:textStyle="bold"
        android:textColor="@color/purple_200"
        android:textColorHint="@color/transparent50"
        android:layout_marginTop="10dp"/>

    <EditText
        android:id="@+id/ed_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/ed_password"
        android:layout_marginTop="10dp"
        android:textStyle="bold"
        android:textColor="@color/purple_200"
        android:textColorHint="@color/transparent50"
        android:inputType="textPassword"/>

    <EditText
        android:id="@+id/ed_verify_pwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/ed_verify_pwd"
        android:inputType="textPassword"
        android:textStyle="bold"
        android:textColor="@color/purple_200"
        android:textColorHint="@color/transparent50"
        android:layout_marginTop="10dp"/>


    <Button
        android:id="@+id/btn_create_user"
        android:layout_width="wrap_content"
        android:layout_height="65dp"
        android:layout_marginLeft="160dp"
        android:textSize="24dp"
        android:textColor="@color/white"
        android:background="@drawable/but_shape_selector"
        android:text="@string/btn_create_user" />



</LinearLayout>