<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:id="@+id/layout_image"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/back2"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/live_1"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@drawable/heart" />

            <ImageView
                android:id="@+id/live_2"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@drawable/heart" />

            <ImageView
                android:id="@+id/live_3"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@drawable/heart" />


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="60dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/text_score"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/text_score"
                    android:textColor="@color/purple_200"
                    android:textSize="22sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/text_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="0"
                    android:textColor="@color/purple_200"
                    android:textSize="22sp"
                    android:textStyle="bold" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@drawable/bgquestion"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text_question"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:lineSpacingExtra="6dp"
                android:text="Guess Animals in English language"
                android:textAlignment="center"
                android:textColor="#332FA2"
                android:textSize="20dp"
                android:textStyle="bold" />

        </LinearLayout>

        <EditText
            android:id="@+id/edit_text"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/bgpurple"
            android:clickable="false"
            android:focusable="false"
            android:gravity="center"
            android:padding="10dp"
            android:textColor="#332FA2"
            android:textSize="32sp"
            tools:ignore="SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/text_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="28dp"
            android:layout_marginRight="28dp"
            android:layout_marginBottom="10dp"
            android:text="@string/text_title"
            android:textColor="@color/purple_200"
            android:textSize="24sp"
            android:textStyle="bold" />


        <LinearLayout
            android:id="@+id/layout_parent1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_parent2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_parent3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
        </LinearLayout>

        <Button
            android:id="@+id/clear_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_gravity="right"
            android:background="@drawable/but_shape_selector"
            android:text="@string/clear_btn"
            android:textColor="@color/white"
            android:textStyle="bold"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ProgressBar
                android:id="@+id/progressbar"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:progressDrawable="@drawable/progress_green"
                android:layoutDirection="ltr"/>

            <ImageView
                android:id="@+id/hurry_up"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_marginLeft="220dp"
                android:background="@drawable/hurryup"
                android:visibility="invisible" />

        </RelativeLayout>


    </LinearLayout>

</RelativeLayout>